--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 button { 
     color:rgb(0, 0, 0); 
     font: old 84% 'trebuchet ms',helvetica,sans-serif; 
-    background-image:linear-gradient(to right bottom, rgb(168, 213, 255), rgb(255, 145, 138));
+    background-image:linear-gradient(to top, rgb(255, 0, 0), rgb(214, 214, 214));
     border:0px solid; 
     border-color: #696 #363 #363 #696;
     margin: 4px 2px; 
