autofill button + css

--- a/style.css
+++ b/style.css
@@ -11,23 +11,27 @@ button {
     color:rgb(0, 0, 0); 
     font: old 84% 'trebuchet ms',helvetica,sans-serif; 
     background-image:linear-gradient(to top, rgb(255, 0, 0), rgb(214, 214, 214));
-    border:0px solid; 
+    border:2px solid white; 
     margin: 4px 2px; 
     padding: 15px;
     cursor: pointer;
     border-radius: 50%;
     font-size:xx-large;
 }
+button:hover {
+    border: 2px solid black; /* Black outline on hover */
+    outline: none; /* Remove default outline */
+}
 
 input {
-    padding: 10px;
-    margin-right: -10px;
+    padding: 20px;
     border-color: black;
     outline: none;
     box-shadow: none;
-    font-size: larger;
+    font-size: x-large;
     width: 100px;
 }
+
 
 #inputContainer input {
     margin: 0; /* Remove default margin */
