--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@
         padding: 10px;
 }
 
+body {
+    font-family: 'Inter', sans-serif; /* Change to your desired font */
+    font-size: 18px; /* Set the font size you want */
+    display: flex; flex-direction: row; align-items: center; justify-content: center;
+    margin-bottom: 80px;
+}
+
 button { 
     color:rgb(0, 0, 0); 
     font: old 84% 'trebuchet ms',helvetica,sans-serif; 
@@ -32,20 +39,22 @@ input {
     font-size: large;
     width: 120px;
 }
+input:hover {
+    outline: 1px solid #37393b;  /* Blue outline when input is focused */
+}
 input:focus {
-    outline: 3px solid #4D90FE;  /* Blue outline when input is focused */
-    outline-offset: 2px;          /* Space between input and outline */
+    outline: 2px solid #37393b;  /* Blue outline when input is focused */
 }
 
 table {
-
-    border: 1px solid;
-    border-color: black;
+    border-color:inherit;
+    border-collapse:collapse;
+    margin-bottom: 10px; /* Adds space between multiple tables */
 }
 
 table td {
     width: 200px;
-    height: 80px;
+    height: 50px;
     text-align: center;
     border: 1px solid;
 }
