--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
 }
 
 
-  @media (max-width: 768px) {
+@media (max-width: 768px) {
     .history {
 display:none;
     }
@@ -79,6 +79,62 @@ display:none;
         left: 0;
         right: 0;
         padding: 10px;
+}
+
+.calcPopup {
+    display: none;
+    flex-direction: column; 
+    align-items: center; 
+    position: absolute;
+    /* width: 80%;
+    height: 80%;
+    top: 10%;
+    left: 10%; */
+    background: rgb(255, 255, 255);
+    border-color: black;
+    border: 2px solid;
+    pointer-events:none;
+    position:fixed;
+    inset:0;
+    margin:0;
+    /* display:grid; */
+    top: 2.5%;
+    height:95%;
+    max-height:none;
+    width:60%;
+    left: 20%;
+    max-width:none;
+    justify-items:center;
+    padding:0;
+    overscroll-behavior:contain;
+    z-index:900;
+    background-color:white;
+    /* color:inherit; */
+    /* transition-duration:.2s;
+    transition-timing-function:cubic-bezier(0,0,.2,1);
+    transition-property:transform,opacity,visibility; */
+    overflow-y:hidden
+}
+
+.calcPopupContent{
+    text-align: center;
+    align-items: center; 
+    justify-content: center;
+   /* width:100%; */
+  overflow-y:auto;
+  overscroll-behavior:contain;
+}
+
+.calcPopupOverlay {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 24;
+    cursor: pointer;
 }
 
 body {
