--- a/style.css
+++ b/style.css
@@ -198,3 +198,21 @@ table td {
     display: inline-block; /* Adjust display to avoid extra space */
 }
 
+#xInput {
+    display: none;
+}
+#custom-file-upload {
+    color:rgb(0, 0, 0); 
+    font: old 84% 'trebuchet ms',helvetica,sans-serif; 
+    background-image:linear-gradient(to top, rgb(255, 0, 0), rgb(255, 200, 200));
+    border:2px solid rgb(255, 255, 255); 
+    margin: 4px 2px; 
+    padding: 15px;
+    cursor: pointer;
+    border-radius: 50%;
+    font-size:xx-large;
+}
+#custom-file-upload:hover {
+    border: 2px solid black; /* Black outline on hover */
+    outline: none; /* Remove default outline */
+}
